just kidding, optional sucks